fix spacing issue on bottom element

--- a/src/components/GovBottomElement/styles.module.scss
+++ b/src/components/GovBottomElement/styles.module.scss
@@ -30,8 +30,6 @@ $breakpoints: (
 
 .item {
   width: 31.4rem;
-
-  display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
 
